package baitap_04_06.decorator.coffee;

public abstract class Coffee {
    public abstract int getPrice();
}
